css/style.css
@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&display=swap");

/* All */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --font-base: "Bai Jamjuree";
  --nav-text: #ede0d4;
  --footer-bg: #2d1b14; /* Espresso Black */
  --sub-heading: #e6c7a6; /* Latte */
  --orange: #ea9835;
  --color-border: #dba061;
  --hover-back: #d7b899;
  --color-body: #ede0d4;
  --btn-bg: #a0522d; /* Cinnamon */
  --btn-hover: #8b4513; /* Darker Cinnamon */
  --btn-text: #faf3e0; /* Creamy White */
  --color-heading: #822a1b;
  --card-color: #6d4c41;
  --sidebarwidth: 250px;
  --navbar: #3e2723;
  --navbar-mobile: #faf3e0;
}
body {
  background: linear-gradient(to right, #c19a6b, #957569);
  color: var(--color-body);
  font-family: var(--font-base), sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 600;
}
h1 {
  color: var(--color-heading);
}
h3 {
  color: var(--sub-heading);
  font-size: 26px;
}
.heading {
  color: var(--color-heading);
}
p {
  font-size: 22px;
}
@media (max-width: 768px) {
  h1 {
    font-size: 26px;
  }
  h2 {
    font-size: 24px;
  }
  h3 {
    font-size: 22px;
  }
  p {
    font-size: 18px;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-weight: 500;
  }
}

.time-line::after {
  content: "";
  position: absolute;
  top: -4px;
  left: -6px;
  padding: 4px;
  border-radius: 50%;
  background-color: var(--color-heading);
}
.text-brand {
  color: var(--color-border);
}
/* navbar */
.navbar {
  color: var(--color-heading);
  background: linear-gradient(var(--color-border), var(--color-border)),
    url(/images/navbar-background.webp);
}
.navbar-toggler-icon {
  color: var(--color-body) !important;
}

.navbar img {
  display: none;
}
@media (min-width: 992px) {
  .navbar {
    min-height: 100vh;
    width: var(--sidebarwidth);

    /* Background settings */
    background-image: url("/images/navbar-background.webp");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;

    /* Optional fallback background color */
    background-color: var(--navbar);
  }

  #content {
    padding-left: var(--sidebarwidth);
  }

  .navbar img {
    display: block !important;
    max-width: 100%;
    height: auto;
    border: 5px solid var(--color-border);
  }

  .footer {
    background-color: var(--footer-bg);
  }
  .header .navbar-nav .nav-link {
    color: #ede0d4 !important;
    text-transform: uppercase;
    text-align: centre;
  }
  .header .navbar-nav .nav-link:hover,
  .header .navbar-nav .nav-link.active {
    color: var(--color-border) !important;
  }
}
.header {
  box-shadow: 0 0.125rem 0.675rem rgb(0 0 0/5%);
}

.header .navbar-nav .nav-link {
  color: var(--color-heading);
  font-weight: 600;
  text-transform: uppercase;
  text-align: centre;
}

.header .navbar-nav .nav-link:hover,
.header .navbar-nav .nav-link.active {
  color: white;
}

.header .navbar-toggler {
  box-shadow: none;
  border: none;
}

a:hover {
  text-decoration: none;
}

.shadow-effect {
  transition: all 0.5s;
}

.shadow-effect:hover {
  box-shadow: -6px 6px 0 0 var(--hover-back);
}

.full-height {
  min-height: 100vh;
  height: 100%;
  display: flex;
  padding-top: 80px;
  padding-bottom: 80px;
  flex-direction: column;
  justify-content: center;
  border-bottom: 0.5px solid black;
}

.bg-base {
  background-color: var(--card-color);
}
/* custom bttn */
.btn-coffe {
  color: var(--btn-text);
  border: var(--card-color);
  background-color: var(--btn-bg);
}
.btn-coffe:hover {
  color: var(--btn-bg);
  background-color: var(--btn-text);
}
/* home */
#home img {
  border: 5px solid var(--color-border);
}

a {
  color: black;
}

a:link {
  text-decoration: none;
  color: white;
}

.link-custom {
  font-weight: 600;
  position: relative;
  color: var(--nav-text);
  padding: 3px;
}

.link-custom::after {
  content: "";
  width: 0%;
  height: 3px;
  background-color: var(--btn-hover);
  position: absolute;
  left: 0;
  top: 110%;
  transition: all 0.4s;
}

.link-custom:hover::after {
  width: 100%;
}

/* about */
#Aboutme p {
  text-align: left;
}
.profile {
  display: flex;
}

.profile a {
  text-decoration: none;
  height: 100px;
  width: 100px;
  border-radius: 50px;
  text-align: center;
  line-height: 110px;
  margin: 5px;
}

.profile a i {
  transition: all 0.3s linear;
}
.profiles a {
  margin: 2px;
}
.profile a:hover i {
  transform: scale(1.4);
}

.fa-instagram {
  color: #e84393;
}

.fa-github {
  color: black;
}

.fa-linkedin {
  color: #0070ac;
}

.fa-twitter {
  color: #0097e6;
}

.fa-facebook {
  color: #0097e6;
}

/* Education */
.education .edu-box {
  min-height: 195px;
}

/* skills */
.Skills .skill-list {
  display: flex;
  justify-content: center;
  padding-bottom: 20px;
}

.Skills .skill-box {
  width: 140px;
  height: 140px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.cup-img {
  width: 140px;
  z-index: 0;
  position: absolute;
  top: -26px;
}
.skill-icon {
  font-size: 30px;
  z-index: 1;
  color: var(--orange);
}

.skill-title {
  margin-top: 18px;
  font-size: 20px;
  font-weight: bold;
}

.skill-description {
  text-align: center;
  padding: 10px;
}
@media (max-width: 720px) {
  .skill-title {
    font-size: 15px;
  }
  .skill-icon {
    font-size: 25px;
    z-index: 1;
    color: var(--orange);
  }
  .cup-img {
    width: 120px;
    z-index: 0;
    position: absolute;
    top: -12px;
  }
  .Skills .skill-list {
    justify-content: start;
  }
}
/* Projects */

.project-img {
  border-radius: 5px;
}
.project-box {
  min-height: 530px;
}
.project-title {
  margin-top: 0;
  margin-bottom: 7px;
}

.project-description {
  margin-bottom: 8px;
}

.project-link {
  margin-top: 8px;
}

/* contact */
.form input {
  margin-bottom: 10px;
}

.form .form-control {
  color: var(--color-heading);
  background-color: #e8e0d6;
}
.form .form-control:focus {
  border: solid 1px var(--color-heading);
  box-shadow: var(--color-heading);
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
/* resume */
.resume {
  z-index: 50 !important;
  font-size: 70px !important;
  opacity: 0.6;
  display: flex;
  position: fixed;
  bottom: 50px;
  right: 50px;
}

/* footer */
.footer {
  background-color: var(--footer-bg);
  color: var(--sub-heading);
}
.footer .profiles,
.footer .email,
.footer-nav {
  text-align: start;
}
@media (max-width: 768px) {
  .footer .profiles,
  .footer .email,
  .footer-nav {
    text-align: start;
  }
}
.footer a {
  color: var(--sub-heading);
}
.footer h5 {
  margin-bottom: 0px;
}
.footer-links {
  list-style: none;
  padding-left: 0;
  display: flex;
  flex-direction: column;
  gap: 2px;
}
.footer-links a:hover {
  color: var(--color-border);
}

